--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
         <title>Amilie's GitHub Projects</title>
     </head>
     <body>
-        <h1>Amilie's GitHub Projects</h1>
-        <p><a href="https://github.com/amilie">List of repositories</a></p>
+        <script language=javascript>
+            window.location = "https://github.com/amilie?tab=repositories";
+        </script>
+        <noscript>
+            <h1>Amilie's GitHub Projects</h1>
+            <p><a href="https://github.com/amilie?tab=repositories">List of repositories</a></p>
+        </noscript>
     </body>
 </html>
